src/test/deca/context/valid/custom/operation-binaires/addition-types-differents-float-int.deca
// Description:
//   Affichage de une addition de deux valeurs de types differents
//
// Resultats:
//    Ligne 12: affichage de 4.3f.
//    Selon page 76 c'est possible.
// Historique:
//    cree le 01/01/2022

{
   // Doit etre accepte.
   print(2.3f+2);
}
