src/test/deca/context/invalid/custom/multiple-names-with-multiple-types.deca
// Description:
//    Declaration de deux variables de meme nom et mais de types differents.
// Resultats:
//    Ligne 11: la variable a est precedement declaree ici.
// Historique:
//    cree le 01/01/2022

{
   // Doit etre refuse.
   int a;
   float a;
}
